feat(markaspot_group): add auto-join all groups feature
Add field_all_groups_member boolean field to user entity that enables
automatic membership in groups.

- JUR groups restricted to uid=1 only
- ORG groups available for all users with field enabled
- Implement hook_user_insert/update for existing groups
- Implement hook_group_insert for new groups

--- a/modules/markaspot_group/markaspot_group.info.yml
+++ b/modules/markaspot_group/markaspot_group.info.yml
@@ -1,5 +1,5 @@
 name: Mark-a-Spot Group
-description: Adds grouped content feature
+description: 'Adds group-based access control for service requests with auto-membership functionality.'
 package: Mark-a-Spot
 type: module
 core_version_requirement: ^10 || ^11
@@ -8,3 +8,4 @@ dependencies:
   - service_request
   - drupal:group
   - gnode
+  - drupal:user
