feat(nuxt): add boolean field support for JSON form widget
Extends FieldTypeRouter to handle boolean schema types as checkboxes.
The upstream json_form_widget module lacks boolean support, so this override adds it via BooleanHelper service injection.
- Create BooleanHelper for checkbox rendering
- Extend FieldTypeRouter to handle boolean type
- Override json_form.router service in markaspot_nuxt

--- a/modules/markaspot_nuxt/markaspot_nuxt.services.yml
+++ b/modules/markaspot_nuxt/markaspot_nuxt.services.yml
@@ -5,3 +5,21 @@ services:
   markaspot_nuxt.frontend_url:
     class: Drupal\markaspot_nuxt\Service\FrontendUrlService
     arguments: ['@config.factory']
+
+  # Boolean helper for JSON form widget
+  markaspot_nuxt.boolean_helper:
+    class: Drupal\markaspot_nuxt\BooleanHelper
+
+  # Override json_form.router to add boolean support
+  json_form.router:
+    class: Drupal\markaspot_nuxt\ExtendedFieldTypeRouter
+    arguments:
+      - '@json_form.string_helper'
+      - '@json_form.object_helper'
+      - '@json_form.array_helper'
+      - '@json_form.integer_helper'
+      - '@markaspot_nuxt.boolean_helper'
+
+  # Override json_form.value_handler to add boolean support
+  json_form.value_handler:
+    class: Drupal\markaspot_nuxt\ExtendedValueHandler
