feat(default_content): add field_page_icon to pages
- Add fa_icon_class field storage and instance for node.page
- Add form display configuration for page edit form
- Update page.csv with default icons (fa-code, fa-info-circle, fa-envelope, fa-legal)
- Update migration to include field_page_icon mapping
- Add fa_icon_class module dependency

--- a/modules/markaspot_default_content/markaspot_default_content.info.yml
+++ b/modules/markaspot_default_content/markaspot_default_content.info.yml
@@ -3,3 +3,5 @@ type: module
 description: Imports initial content
 package: Markaspot
 core_version_requirement: ^10 || ^11
+dependencies:
+  - fa_icon_class:fa_icon_class
