--- a/modules/markaspot_default_content/migrations/migrate_plus.migration.markaspot_migrate_default_content_page.yml
+++ b/modules/markaspot_default_content/migrations/migrate_plus.migration.markaspot_migrate_default_content_page.yml
@@ -16,6 +16,7 @@ process:
   body/format:
     plugin: default_value
     default_value: full_html
+  field_page_icon: field_page_icon
 destination:
   plugin: 'entity:node'
   default_bundle: page
