fix(config): make group type names configurable for legacy sites
Add configuration options for group_filter_type and jurisdiction_group_type
to support legacy sites using 'organisation'/'jurisdiction' instead of
the shorter 'org'/'jur' names.

- Add update hook 11801 to auto-detect legacy naming
- Create default jurisdiction group if none exists, populated from
  existing markaspot_nuxt.settings (map center, zoom, site name)
- Add form fields in Open311 settings
- Update MarkASpotSettingsController and GeoreportProcessorService
  to read group types from config with fallback defaults
- Add config schema for markaspot_open311.settings

--- a/modules/markaspot_open311/config/install/markaspot_open311.settings.yml
+++ b/modules/markaspot_open311/config/install/markaspot_open311.settings.yml
@@ -25,3 +25,7 @@ discovery:
         - text/xml
         - application/json
 nid-limit: ''
+# Group Integration Settings
+group_filter_enabled: false
+group_filter_type: 'org'
+jurisdiction_group_type: 'jur'
