refactor(service_request): change field_organisation to group reference
- Update field storage to target group entities instead of taxonomy terms
- Update field config to use group handler with org bundle
- Change form widget to options_select for better UX with groups

--- a/modules/service_request/config/install/core.entity_form_display.node.service_request.management.yml
+++ b/modules/service_request/config/install/core.entity_form_display.node.service_request.management.yml
@@ -123,7 +123,7 @@ content:
     third_party_settings: {  }
     region: content
   field_organisation:
-    type: options_buttons
+    type: options_select
     weight: 16
     region: content
     settings: {  }
