--- a/modules/service_request/config/install/field.field.node.service_request.field_organisation.yml
+++ b/modules/service_request/config/install/field.field.node.service_request.field_organisation.yml
@@ -3,28 +3,31 @@ status: true
 dependencies:
   config:
     - field.storage.node.field_organisation
+    - group.type.org
     - node.type.service_request
-    - taxonomy.vocabulary.organisation
   enforced:
     module:
       - service_request
+  module:
+    - group
 id: node.service_request.field_organisation
 field_name: field_organisation
 entity_type: node
 bundle: service_request
-label: 'Department, Organisation responsible'
+label: Department
 description: ''
 required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
-  handler: 'default:taxonomy_term'
+  handler: 'default:group'
   handler_settings:
     target_bundles:
-      organisation: organisation
+      org: org
     sort:
-      field: _none
-    auto_create: true
+      field: label
+      direction: ASC
+    auto_create: false
     auto_create_bundle: ''
 field_type: entity_reference
