feat(fa_icon_class): add visual icon picker with dark mode support
- Replace text input with searchable icon grid modal
- Use iconify_field API for local icon rendering (GDPR compliant)
- Add dark mode detection for Gin/Claro themes
- Remove external iconify-icon.min.js CDN dependency
- Add render endpoint via IconResolver service

--- a/modules/fa_icon_class/fa_icon_class.info.yml
+++ b/modules/fa_icon_class/fa_icon_class.info.yml
@@ -1,7 +1,8 @@
-name: FontAwesome Icon Class
+name: Icon Class
 type: module
-description: Adds a fontawesome icon class formatter and widget.
+description: Adds an icon class field with visual picker using Iconify collections.
 package: Field types
 core_version_requirement: ^10 || ^11
 dependencies:
-  - node
+  - drupal:node
+  - iconify_field:iconify_field
