--- a/modules/markaspot_nuxt/markaspot_nuxt.routing.yml
+++ b/modules/markaspot_nuxt/markaspot_nuxt.routing.yml
@@ -59,3 +59,11 @@ markaspot_nuxt.jurisdictions:
     _format: 'json'
   requirements:
     _permission: 'access content'
+
+markaspot_nuxt.organisations:
+  path: '/api/organisations'
+  defaults:
+    _controller: '\Drupal\markaspot_nuxt\Controller\MarkASpotSettingsController::getOrganisations'
+    _format: 'json'
+  requirements:
+    _permission: 'access content'
