refactor(emergency): rename endpoint from /api/system/status to /api/emergency-mode/status
More semantic endpoint name that clearly indicates its purpose.

--- a/modules/markaspot_emergency/config/install/markaspot_emergency.settings.yml
+++ b/modules/markaspot_emergency/config/install/markaspot_emergency.settings.yml
@@ -58,7 +58,7 @@ allowed_urls:
   - '/'
   - '/sos'
   - '/emergency'
-  - '/api/system/status'
+  - '/api/emergency-mode/status'
 
 maintenance:
   unpublish_non_selected: false
