fix: add optional config for organisation field to new installations

--- a/modules/markaspot_group/markaspot_group.info.yml
+++ b/modules/markaspot_group/markaspot_group.info.yml
@@ -5,7 +5,7 @@ type: module
 core_version_requirement: ^10 || ^11
 
 dependencies:
-  - service_request
   - drupal:group
   - gnode
   - drupal:user
+  - drupal:node
