refactor(nuxt): make json_form_widget a soft dependency
- Add update hook 11799 to repair entity definitions after DB import
- Add update hook 11800 to install json_form_widget module
- Convert json_form_widget from hard to soft dependency
- Register json_form services dynamically via ServiceProvider
- Enables smoother updates from older versions

--- a/modules/markaspot_nuxt/markaspot_nuxt.info.yml
+++ b/modules/markaspot_nuxt/markaspot_nuxt.info.yml
@@ -3,5 +3,6 @@ type: module
 description: 'Exposes Mark-a-Spot configuration and data to Nuxt frontend via JSON API endpoints with independent map configuration'
 package: Mark-a-Spot
 core_version_requirement: ^10 || ^11
-dependencies:
-  - json_form_widget:json_form_widget
+
+# Note: json_form_widget is a soft dependency installed via update hook.
+# Removing hard dependency allows updates from older versions.
