feat(nuxt): add custom color picker with Tailwind presets
- Add ExtendedStringHelper for color format fields
- Create combined widget: preset dropdown + HTML5 color picker
- Support both Tailwind names and custom HEX values
- Add color-neutral format for neutral-only presets (5 options)
- JavaScript syncs hidden value field for json_form_widget
- Add CSS styling for color picker container

--- a/modules/markaspot_nuxt/schema/nuxt_config.ui.json
+++ b/modules/markaspot_nuxt/schema/nuxt_config.ui.json
@@ -36,12 +36,14 @@
     "properties": {
       "primary": {
         "ui:options": {
-          "description": "Primary color for buttons, links and accents"
+          "widget": "color",
+          "description": "Primary color for buttons, links and accents. Enter a Tailwind name (blue, cyan) or HEX value (#rrggbb)."
         }
       },
       "secondary": {
         "ui:options": {
-          "description": "Secondary color for less important actions"
+          "widget": "color",
+          "description": "Secondary color for less important actions. Enter a Tailwind name (blue, cyan) or HEX value (#rrggbb)."
         }
       },
       "neutral": {
