feat(profile): add jur group type config for multi-tenant support
Adds complete configuration for Jurisdiction (jur) group type:
- Group type and roles (admin, member, moderator, outsider, anonymous)
- Field instances (nuxt_config, boundary, logo, slug, fonts, css)
- Form/view displays with nuxt_config_json_form widget
- Group relationships (membership, service_request)
- ECA workflows for jurisdiction assignment

  Required for dev-2.x frontend multi-tenant configuration.

--- a/composer.json
+++ b/composer.json
@@ -70,7 +70,8 @@
         "drupal/field_formatter_class": "^1.0",
         "drupal/iconify_field": "^1.2",
         "drupal/inline_entity_form": "^3",
-        "drupal/shs": "^3"
+        "drupal/shs": "^3",
+        "drupal/json_form_widget": "^1"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
