feat(service_provider): add ECA event for SP response notifications
- Add ServiceProviderResponseEvent with EntityEventInterface for ECA integration
- Add ServiceProviderEvent ECA plugin exposing event to workflow system
- Add ServiceProviderEvents constants class
- Add POST /auth endpoint for secure email verification (not in URL/logs)
- Controller dispatches event after SP submission for ECA to handle
- Add source markers for language-agnostic note parsing
- Support moderator vs service_provider note differentiation
- Return structured completion data with text, source, author, date

--- a/modules/markaspot_service_provider/markaspot_service_provider.routing.yml
+++ b/modules/markaspot_service_provider/markaspot_service_provider.routing.yml
@@ -31,3 +31,12 @@ markaspot_service_provider.rest_get:
   methods: [GET]
   requirements:
     _access: 'TRUE'
+
+markaspot_service_provider.rest_auth:
+  path: '/api/service-response/{uuid}/auth'
+  defaults:
+    _controller: '\Drupal\markaspot_service_provider\Controller\ServiceProviderController::authenticateServiceProvider'
+    _title: 'Authenticate Service Provider'
+  methods: [POST]
+  requirements:
+    _access: 'TRUE'
