refactor(vision): use CAP standard codes for hazard categories
Switch from custom hazard category codes to CAP (Common Alerting
Protocol) standard codes for interoperability with emergency
management systems.

CAP categories: Infra, Transport, Safety, Env, Fire, Health, Geo, Met, Other

Reference: https://docs.oasis-open.org/emergency/cap/v1.2/CAP-v1.2-os.html

--- a/modules/markaspot_vision/config/optional/field.field.media.request_image.field_ai_hazard_category.yml
+++ b/modules/markaspot_vision/config/optional/field.field.media.request_image.field_ai_hazard_category.yml
@@ -11,7 +11,7 @@ field_name: field_ai_hazard_category
 entity_type: media
 bundle: request_image
 label: AI Hazard Category
-description: 'AI-detected hazard category (electrical, structural, environmental, traffic, fire, health, other)'
+description: 'AI-detected hazard category using CAP standard codes (Infra, Transport, Safety, Env, Fire, Health, Geo, Met, Other)'
 required: false
 translatable: false
 default_value: {  }
