fix: add Vary header for Accept-Language on GeoReport API responses
Add GeoreportCacheSubscriber to ensure HTTP caches serve different
responses for different languages. Sets Vary: Accept-Language header
and adds language cache contexts to cacheable responses.

This enables proper content negotiation for translated service_name
and status fields when clients send Accept-Language headers.

--- a/modules/markaspot_open311/markaspot_open311.services.yml
+++ b/modules/markaspot_open311/markaspot_open311.services.yml
@@ -39,3 +39,7 @@ services:
     arguments: ['@messenger']
     tags:
       - { name: event_subscriber }
+  markaspot_open311.cache_subscriber:
+    class: Drupal\markaspot_open311\EventSubscriber\GeoreportCacheSubscriber
+    tags:
+      - { name: event_subscriber }
