feat(open311): restrict sensitive fields to managers and add gid stats filter
Moves organisation data into manager-only response section. Replaces
hardcoded hazard_level/hazard_category with config-driven field_access
manager_fields. Adds gid query parameter to stats endpoints for
sub-jurisdiction filtering.

--- a/modules/markaspot_open311/config/install/markaspot_open311.settings.yml
+++ b/modules/markaspot_open311/config/install/markaspot_open311.settings.yml
@@ -25,6 +25,13 @@ discovery:
         - text/xml
         - application/json
 nid-limit: ''
+# Field Access Settings
+field_access:
+  manager_fields:
+    - field_hazard_level
+    - field_sentiment
+    - field_ai_hazard_category
+    - field_organisation
 # Group Integration Settings
 group_filter_enabled: false
 group_filter_type: 'org'
