feat(nuxt): add conditionalFields schema, deprecate legacy category arrays
Add conditionalFields property to nuxt_config schema for config-driven
conditional form fields. Validates field_* naming convention, requires
categories array with integer items, supports optional required/component/label.

Mark objectIdCategories, partyCategories, oktoberfestCategories,
competitionCategories, objectId, and party as deprecated.

--- a/modules/markaspot_nuxt/schema/nuxt_config.ui.json
+++ b/modules/markaspot_nuxt/schema/nuxt_config.ui.json
@@ -157,22 +157,27 @@
       },
       "objectIdCategories": {
         "ui:options": {
-          "description": "Category IDs that show the object ID field"
+          "description": "Deprecated: use conditionalFields"
         }
       },
       "competitionCategories": {
         "ui:options": {
-          "description": "Category IDs for competition mode"
+          "description": "Deprecated: use conditionalFields"
         }
       },
       "partyCategories": {
         "ui:options": {
-          "description": "Category IDs that show the party selection field"
+          "description": "Deprecated: use conditionalFields"
         }
       },
       "oktoberfestCategories": {
         "ui:options": {
-          "description": "Category IDs for Oktoberfest-specific fields"
+          "description": "Deprecated: use conditionalFields"
+        }
+      },
+      "conditionalFields": {
+        "ui:options": {
+          "description": "Category-conditional field visibility. Keys are Drupal field names, values define which categories trigger them."
         }
       }
     }
