feat(nuxt): add /api/fonts.css endpoint for custom font delivery
Adds a dedicated Drupal route and controller method that serves custom
font CSS for a jurisdiction. This enables the Nuxt frontend to load fonts
via a static <link rel="stylesheet"> instead of injecting CSS through
reactive JavaScript, making font delivery immune to Vue/unhead hydration
issues.

The endpoint reads @font-face declarations from field_nuxt_config.theme.customCss
(primary) or field_custom_css (fallback), and generates CSS variable
declarations for --font-heading and --font-body. Response is cached for
24 hours with public Cache-Control and Access-Control-Allow-Origin: *.

--- a/modules/markaspot_nuxt/markaspot_nuxt.routing.yml
+++ b/modules/markaspot_nuxt/markaspot_nuxt.routing.yml
@@ -34,6 +34,14 @@ markaspot_nuxt.field_options:
   requirements:
     _permission: 'access content'
 
+markaspot_nuxt.fonts_css:
+  path: '/api/fonts.css'
+  defaults:
+    _controller: '\Drupal\markaspot_nuxt\Controller\MarkASpotSettingsController::getFontsCss'
+    _title: 'Custom Fonts CSS'
+  requirements:
+    _access: 'TRUE'
+
 markaspot_nuxt.jurisdictions:
   path: '/api/jurisdictions'
   defaults:
