fix(markaspot_group): change jur-admin scope from insider to individual
insider scope made all group members automatically admins.
individual scope allows explicit per-member role assignment.

--- a/modules/markaspot_group/config/install/group.role.jur-admin.yml
+++ b/modules/markaspot_group/config/install/group.role.jur-admin.yml
@@ -7,7 +7,7 @@ id: jur-admin
 label: Admin
 weight: -99
 admin: true
-scope: insider
+scope: individual
 global_role: administrator
 group_type: jur
 permissions: {  }
