feat(nuxt): add systemNotice to JSON schema for admin UI editing

--- a/modules/markaspot_nuxt/schema/nuxt_config.ui.json
+++ b/modules/markaspot_nuxt/schema/nuxt_config.ui.json
@@ -448,5 +448,26 @@
       "widget": "textarea",
       "rows": 10
     }
+  },
+
+  "systemNotice": {
+    "ui:options": {
+      "title": "System Notice",
+      "description": "Persistent banner for non-production environments",
+      "weight": 125
+    },
+    "properties": {
+      "message": {
+        "ui:options": {
+          "widget": "textfield",
+          "placeholder": "e.g. Testsystem: Meldungen werden hier nicht bearbeitet."
+        }
+      },
+      "color": {
+        "ui:options": {
+          "description": "Banner color theme"
+        }
+      }
+    }
   }
 }
